# gh-copilot-intro

./: .gitignore  AGENTS.md  IDEAS.md  README.md  SESSIONS.md
.github/: copilot-instructions.md
.github/agents/: workshop-reviewer.agent.md
.github/instructions/: azure-container-apps-deployment.instructions.md  javascript.instructions.md  python.instructions.md
00-start-here/: README.md
01-what-is-github-copilot/: README.md
02-setup/: README.md
03-first-wins/: README.md
04-effective-usage/: README.md
05-hands-on-node/: README.md
06-spaces-and-context/: README.md
07-constitution-and-instructions/: README.md
08-agents-skills-mcp-plugins/: README.md
09-spec-driven-development/: README.md
10-copilot-cli/: README.md
11-hands-on-python/: README.md
12-deploy-to-azure/: README.md
13-token-optimization/: README.md
14-github-copilot-sdk/: README.md
constitution/: README.md
facilitator/: README.md  full-day-agenda.md  workshop-attendee.pptx  workshop-walkthrough.pptx
facilitator/walkthrough/: README.md  SPEC.md  app.js  index.html  styles.css
reference/: README.md  demo-prompts.md  prompt-patterns.md  troubleshooting.md
samples/: README.md
samples/python-ticket-analyzer/: README.md  pyproject.toml
samples/python-ticket-analyzer/data/: tickets.json
samples/python-ticket-analyzer/specs/needs-attention/: README.md
samples/python-ticket-analyzer/src/ticket_analyzer/: __init__.py  analytics.py  cli.py  data.py  models.py
samples/python-ticket-analyzer/tests/: test_analytics.py  test_cli.py
spaces/: README.md
(+31 files in other folders)
