[project]
name = "ticket-analyzer"
version = "0.1.0"
description = "Workshop sample for Copilot CLI and spec-driven development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.16.1",
]

[project.scripts]
ticket-analyzer = "ticket_analyzer.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
